Update copyright and correct example

--- a/burntrees.html
+++ b/burntrees.html
@@ -279,7 +279,7 @@
 <p>To (randomly) sample a specific number of trees, use burntrees.pl together with &#39;shuf&#39;. Note that you could sample more trees than you have in your tree file (i.e., performing a bootstrap)!</p>
 
 <pre><code>  burntrees.pl -t data.t | shuf -rn 10
-  burntrees.pl -t -t p data.t | shuf -rn 1000</code></pre>
+  burntrees.pl -t -f p data.t | shuf -rn 1000</code></pre>
 
 <h1 id="AUTHOR">AUTHOR</h1>
 
@@ -299,7 +299,7 @@
 
 <h1 id="LICENSE-AND-COPYRIGHT">LICENSE AND COPYRIGHT</h1>
 
-<p>Copyright (c) 2006-2017, Johan Nylander. All rights reserved.</p>
+<p>Copyright (c) 2006-2019, Johan Nylander. All rights reserved.</p>
 
 <p>This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.</p>
 
